--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <div class="portfolio-layer">
                     <h4>TCC</h4>
                     <p>Site feito em grupo de uma empresa fictícia de criação de sites.</p>
-                    <a href="https://suedduarte.github.io/ecorecycling/"><i class='bx bx-link-external'></i></a>
+                    <a href="https://crealize--contatocrealize.repl.co/index.html"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
