--- a/index.html
+++ b/index.html
@@ -165,15 +165,6 @@
         <h3>HTML & CSS <div class="languages"><i class='bx bxl-html5'></i><i class='bx bxl-css3'></i></div>
         </h3>
         <div class="portfolio-container">
-            <div class="portfolio-box">
-                <img src="img/tcc.png" alt="">
-
-                <div class="portfolio-layer">
-                    <h4>TCC</h4>
-                    <p>Site feito em grupo de uma empresa fictícia de criação de sites.</p>
-                    <a href="https://crealize--contatocrealize.repl.co/index.html"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
 
             <div class="portfolio-box">
                 <img src="img/escolassemviolencia.jpeg" alt="">
@@ -252,10 +243,20 @@
     </section>
     <!-- Projetos JS -->
     <section class="portfolio" id="js">
-        <h3>JavaScript <div class="languages"><i class='bx bxl-javascript'></i></div>
+        <h3>JavaScript & PHP<div class="languages"><i class='bx bxl-javascript'></i><i class='bx bxl-php'></i></div>
         </h3>
         
         <div class="portfolio-container">
+
+            <div class="portfolio-box">
+                <img src="img/tcc.jpeg" alt="">
+
+                <div class="portfolio-layer">
+                    <h4>Crealize</h4>
+                    <p>Site para o TCC de Programação Web feito em grupo, de uma empresa fictícia de criação de sites.</p>
+                    <a href="https://crealize--contatocrealize.repl.co/index.html"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
             <div class="portfolio-box">
             <img src="img/cronometro.jpeg" alt="">
 
