--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
             <div class="overlay"></div>
         </div>
         <div class="home-img">
-            <img src="img/home.png" alt="">
+            <img src="img/me.png">
         </div>
     </section>
 
     <!-- Grid, sobre mim -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="img/about.png" alt="">
+            <img src="img/me2.png">
         </div>
         <div class="about-content">
             <h2 class="heading">Sobre <span>Mim</span></h2>
