--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <div class="services-box">
                 <i class='bx bxs-palette'></i>
                 <h3>UX/UI Designer</h3>
-                <p>Estou fazendo curso de UX/UI Design atualmente, pois acredito que o desenvolvimento web e este curso se completam. O design de um site ou aplicativo diz muito sobre o conceito que se quer passar.</p>
+                <p>Estou fazendo curso de UX/UI Design atualmente através do Instituto Caldeira, pois acredito que o desenvolvimento web e este curso se completam. O design de um site ou aplicativo diz muito sobre o conceito que se quer passar.</p>
             </div>
             <div class="services-box">
                 <i class='bx bxs-camera'></i>
