--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="img/tcc.jpeg" alt="">
+                <img src="img/tcc.png" alt="">
 
                 <div class="portfolio-layer">
                     <h4>Crealize</h4>
@@ -179,7 +179,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="img/techgeneration.jpeg" alt="">
+                <img src="img/techgeneration.png" alt="">
 
                 <div class="portfolio-layer">
                     <h4>Tech Generation</h4>
