--- a/index.html
+++ b/index.html
@@ -179,6 +179,15 @@
                 </div>
             </div>
             <div class="portfolio-box">
+                <img src="img/cadastro.png" alt="">
+
+                <div class="portfolio-layer">
+                    <h4>Cadastro</h4>
+                    <p>Exemplo de cadastro com mensagens de feedback para o usuário.</p>
+                    <a href="https://suedduarte.github.io/cadastro/"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
                 <img src="img/techgeneration.png" alt="">
 
                 <div class="portfolio-layer">
@@ -285,15 +294,6 @@
                     <h4>Site Responsivo</h4>
                     <p>Site responsivo, que fala da importância da responsividade.</p>
                     <a href="https://suedduarte.github.io/responsividade/"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="img/calculadoraimc.jpeg" alt="">
-
-                <div class="portfolio-layer">
-                    <h4>Calculadorora IMC</h4>
-                    <p>Calculador de IMC funcional.</p>
-                    <a href="https://suedduarte.github.io/calculadora-imc/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
