--- a/index.html
+++ b/index.html
@@ -186,6 +186,15 @@
                     <p>Exemplo de cadastro com mensagens de feedback para o usuário.</p>
                     <a href="https://suedduarte.github.io/cadastro/"><i class='bx bx-link-external'></i></a>
                 </div>
+            </div> 
+            <div class="portfolio-box">
+                <img src="img/dashboard.png" alt="">
+
+                <div class="portfolio-layer">
+                    <h4>Dashboard</h4>
+                    <p>Exemplo de um design de dashboard.</p>
+                    <a href="https://suedduarte.github.io/dashboard/"><i class='bx bx-link-external'></i></a>
+                </div>
             </div>
             <div class="portfolio-box">
                 <img src="img/techgeneration.png" alt="">
@@ -196,15 +205,7 @@
                     <a href="https://suedduarte.github.io/techgenereation/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
-            <div class="portfolio-box">
-                <img src="img/createco.jpeg" alt="">
-
-                <div class="portfolio-layer">
-                    <h4>Create.co</h4>
-                    <p>Site de uma empresa fictícia de serviços de social media.</p>
-                    <a href="https://suedduarte.github.io/create.co/"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>   
+              
             <div class="portfolio-box">
                 <img src="img/escolassemviolencia.jpeg" alt="">
 
