--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
                 <img src="img/landingpage.png" alt="">
 
                 <div class="portfolio-layer">
-                    <h4>Landing Page Starbucks</h4>
-                    <p>Exemplo de landing page, com tema referente a cafeteria Starbucks.</p>
-                    <a href="https://suedduarte.github.io/landingpagestarbucks/"><i class='bx bx-link-external'></i></a>
+                    <h4>Landing Page</h4>
+                    <p>Landing page com conteúdo apresentando o signifiado da mesma.</p>
+                    <a href="https://suedduarte.github.io/landingpage/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
