--- a/index.html
+++ b/index.html
@@ -197,6 +197,15 @@
                 </div>
             </div>
             <div class="portfolio-box">
+                <img src="img/todolist.png" alt="">
+
+                <div class="portfolio-layer">
+                    <h4>To-Do List</h4>
+                    <p>Site To-Do list para anotar tarefas, com salvamento ao recarregar a página.</p>
+                    <a href="https://suedduarte.github.io/todolist/"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
                 <img src="img/techgeneration.png" alt="">
 
                 <div class="portfolio-layer">
