--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <div class="about-content">
             <h2 class="heading">Sobre <span>Mim</span></h2>
-            <p>Tenho 19 anos, sou gaúcha, moro em Porto Alegre e sou alguém que ama aprender coisas novas e por isso me dedico a áreas distintas. Sou desenvolvedora web, com preferência no front-end. Adoro a área do design e experiência do usuário e acredito que cada detalhe faz total diferença. Também sou fotógrafa e atualmente faço faculdade de Jornalismo.</p>
+            <p>Tenho 19 anos, moro em Porto Alegre e sou alguém que ama aprender coisas novas e por isso me dedico a áreas distintas. Faço parte do Geração Caldeira, sou UX/UI Designer e desenvolvedora web. Adoro a área do design e experiência do usuário e acredito que cada detalhe faz total diferença. Também sou fotógrafa e atualmente faço faculdade de Jornalismo.</p>
             <a href="https://www.linkedin.com/in/suedduarte" class="btn">Saiba mais</a>
         </div>
     </section>
@@ -134,6 +134,10 @@
                 <i class="fi fi-brands-mysql"></i>
                 <h3>MySQL</h3>
             </div>
+             <div class="services-box">
+                <i class='bx bxl-figma'></i>
+                <h3>Figma</h3>
+            </div>
         </div>
     </section>
 
@@ -141,6 +145,11 @@
     <section class="services" id="services">
         <h2 class="heading">Meus <span>Serviços</span></h2>
         <div class="services-container">
+            <div class="services-box">
+                <i class='bx bxs-user'></i>
+                <h3>UX/UI Designer</h3>
+                <p>Fiz a trilha de UX/UI Design pela Alura, através do Programa Nova Geração e me encantei por essa área que tem grande presença da organização, do design e da empatia.</p>
+            </div>
             <div class="services-box">
                 <i class='bx bx-code-alt'></i>
                 <h3>Desenvolvedora Web</h3>
