--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="home-content">
             <h3>Olá! Eu sou</h3>
             <h1>Sued Duarte</h1>
-            <p>Seja bem-vindo(a) ao meu portfólio. Estou aqui para te mostrar um pouco sobre meu trabalho. Acredito que a dedicação juntamente com a organização trazem bons resultados.
+            <p>Seja bem-vindo(a) ao meu portfólio. Estou aqui para te mostrar um pouco sobre meu trabalho. Acredito que a dedicação juntamente com a organização são a chave para um bom futuro.
             </p>
 
             <div class="social-media">
@@ -163,9 +163,29 @@
         </div>
     </section>
 
+    <!-- UX/UI Design -->
+    <section class="portfolio" id="portfolio">
+        <h2 class="heading">Meus projetos como<span> UX/UI Designer</span></h2>
+        <div class="languages"><i class='bx bxl-html5'></i><i class='bx bxl-css3'></i><i class='bx bxl-javascript'></i><i class='bx bxl-php'></i></div>
+        
+        <div class="portfolio-container">
+            <div class="portfolio-box">
+                <img src="img/tcc.png" alt="">
+
+                <div class="portfolio-layer">
+                    <h4>Crealize</h4>
+                    <p>Site para o TCC de Programação Web feito em grupo, de uma empresa fictícia de criação de sites.</p>
+                    <a href="https://crealize--contatocrealize.repl.co/index.html"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
   <!-- Projetos HTML, CSS. JS e PHP -->
     <section class="portfolio" id="portfolio">
         <h2 class="heading">Meus projetos como<span> Desenvolvedora Web</span></h2>
+        <p>Este portfólio foi criado por mim :)</p>
         <div class="languages"><i class='bx bxl-html5'></i><i class='bx bxl-css3'></i><i class='bx bxl-javascript'></i><i class='bx bxl-php'></i></div>
         
         <div class="portfolio-container">
@@ -271,15 +291,6 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="img/magento2.png" alt="">
-
-                <div class="portfolio-layer">
-                    <h4>Magento</h4>
-                    <p>Site informativo feito em dupla, sobre a plataforma Magento.</p>
-                    <a href="https://suedduarte.github.io/projetomagento/"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
                 <img src="img/hotsite.jpeg" alt="">
 
                 <div class="portfolio-layer">
@@ -311,17 +322,8 @@
 
                 <div class="portfolio-layer">
                     <h4>Site Responsivo</h4>
-                    <p>Site responsivo, que fala da importância da responsividade.</p>
+                    <p>Site responsivo, feito com bootstrap.</p>
                     <a href="https://suedduarte.github.io/responsividade/"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="img/horoscopo.jpeg" alt="">
-
-                <div class="portfolio-layer">
-                    <h4>Horóscopo</h4>
-                    <p>Horóscopo funcional.</p>
-                    <a href="https://suedduarte.github.io/horoscope/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
