--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="services-box">
                 <i class='bx bxs-user'></i>
                 <h3>UX/UI Designer</h3>
-                <p>Fiz a trilha de UX/UI Design pela Alura e me encantei por essa área que tem grande presença da organização e da empatia.</p>
+                <p>Fiz a trilha de UX/UI pela Alura e me encantei por essa área cheia de criatividade e empatia.</p>
                 <a href="#ux" class="btn">Portfólio <i class='bx bx-down-arrow-alt'></i></a>
             </div>
            <div class="services-box">
