--- a/index.html
+++ b/index.html
@@ -148,25 +148,25 @@
                 <i class='bx bxs-user'></i>
                 <h3>UX/UI Designer</h3>
                 <p>Fiz a trilha de UX/UI pela Alura e me encantei por essa área cheia de criatividade e empatia.</p>
-                <a href="#ux" class="btn">Portfólio <i class='bx bx-down-arrow-alt'></i></a>
+                <a href="#ux" class="btn"><i class='bx bx-down-arrow-alt'></i></a>
             </div>
            <div class="services-box">
                 <i class='bx bx-code-alt'></i>
                 <h3>Desenvolvedora Web</h3>
                 <p>Sempre adorei tecnologia e poder criar interfaces é maravilhoso e fascinante.</p>
-                <a href="#dev" class="btn">Portfólio <i class='bx bx-down-arrow-alt'></i></a>
+                <a href="#dev" class="btn"><i class='bx bx-down-arrow-alt'></i></a>
             </div>
             <div class="services-box">
                 <i class='bx bxs-megaphone'></i>
                 <h3>Comunicadora</h3>
                 <p>Sou estudande universitária de jornalismo e acredito que comunicar é levar transparência.</p>
-                <a href="#comu" class="btn">Portfólio <i class='bx bx-down-arrow-alt'></i></a>
+                <a href="#comu" class="btn"><i class='bx bx-down-arrow-alt'></i></a>
             </div>
            <div class="services-box">
                 <i class='bx bxs-camera'></i>
                 <h3>Fotógrafa</h3>
                 <p>Amo o audiovisual desde muito nova e gosto do fato de poder registrar momentos especiais.</p>
-                <a href="#fot" class="btn">Portfólio <i class='bx bx-down-arrow-alt'></i></a>
+                <a href="#fot" class="btn"><i class='bx bx-down-arrow-alt'></i></a>
             </div>
         </div>
     </section>
