--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
     <!-- UX/UI Design -->
     <section class="portfolio" id="portfolio">
         <h2 class="heading" id="ux">Meus projetos como<span> UX/UI Designer</span></h2>
-        <p>Projeto em desenvolvimento, feito na equipe do Geração Caldeira. O projeto consiste em criar duas novas funcionalidades para um App já existente, são elas: divulgar conteúdos e
-também para tirar dúvidas de usuários.</p>
+            <h5>Projeto em desenvolvimento, feito na equipe do Geração Caldeira. O projeto consiste em criar duas novas funcionalidades para um App já existente, são elas: divulgar conteúdos e
+            também para tirar dúvidas de usuário.</h5>
         <div class="languages"><i class='bx bxl-figma'></i></div>
         
         <div class="portfolio-container">
