--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                   <img src="img/notion.png" alt="">
                 
                 <div class="portfolio-layer">
-                    <h4>Organização do projeto no Notion</h4>
+                    <h4>Planejamento</h4>
                     <p>Dados, organização e anotações do projeto na plataforma Notion.</p>
                     <a href="https://www.notion.so/Projeto-UX-UI-GC-6611986ce97a4ec79c74ab149f44bffa?pvs=4"><i class='bx bx-link-external'></i></a>
                 </div>
@@ -305,24 +305,6 @@
                     <p>Site em formato de parallax com um site fictício de resenhas de livros. </p>
                     <a href="https://suedduarte.github.io/parallax-duart-s-resenha/"><i
                             class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="img/hotsite.jpeg" alt="">
-
-                <div class="portfolio-layer">
-                    <h4>Hotsite</h4>
-                    <p>Hotsite com o tema de inscrição para cursos oferecidos por um Instituto Social.</p>
-                    <a href="https://suedduarte.github.io/hotsite/"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="img/grid.jpeg" alt="">
-
-                <div class="portfolio-layer">
-                    <h4>Grid Marvel</h4>
-                    <p>Site com dois exemplos diferentes de grid com o tema Marvel.</p>
-                    <a href="https://suedduarte.github.io/Marvelfansgrid/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
