--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             </div>
             <div class="overlay"></div>
         </div>
-        <div class="home-img">
+        <!-- <div class="home-img">
             <img src="img/me.png">
-        </div>
+        </div> -->
     </section>
 
     <!-- Grid, sobre mim -->
@@ -326,7 +326,7 @@
     <!-- Jornalismo -->
      <section class="portfolio" id="portfolio">
         <h2 class="heading" id="comu">Meus projetos como<span> Comunicadora</span></h2>
-            <h5>Projetos criados na faculdade de Jornalismo.</h5>
+            <p>Projetos criados na faculdade de Jornalismo.</p>
         <div class="languages"><i class='bx bxs-video-recording'></i><i class='bx bxs-microphone-alt'></i><i class='bx bxs-megaphone'></i></div>
         
         <div class="portfolio-container">
