--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         
         <div class="portfolio-container">
             <div class="portfolio-box">
-               <img src="img/uxui.jpg" alt="">
+               <img src="img/uxui.png" alt="">
                 
                 <div class="portfolio-layer">
                     <h4>Projeto de UX/UI</h4>
