--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
      <section class="portfolio" id="portfolio">
         <h2 class="heading" id="comu">Meus projetos como<span> Comunicadora</span></h2>
             <p>Projetos criados na faculdade de Jornalismo.</p>
-        <div class="languages"><i class='bx bxs-video-recording'></i><i class='bx bxs-microphone-alt'></i><i class='bx bxs-megaphone'></i></div>
+        <div class="languages"><i class='bx bxs-video-recording'></i><i class='bx bx-podcast'></i><i class='bx bxs-megaphone'></i></div>
         
         <div class="portfolio-container">
             <div class="portfolio-box">
