--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
         <div class="profession-container">
             <div class="profession-box">
                 <div class="profession" style="--i:0;">
-                    <i class='bx bx-code-alt'></i>
+                    <i class='bx bxs-user'></i>
                     <h3>UX/UI Designer</h3>
                 </div>
-                <div class="profession" style="--i:1;">
-                    <i class='bx bxs-palette'></i>
-                    <h3>Desenvolvedora Web</h3>
-                </div>  
-                <div class="profession" style="--i:3;">
-                    <i class='bx bx-pencil'></i>
+               <div class="profession" style="--i:3;">
+                    <i class='bx bxs-megaphone'></i>
                     <h3>Comunicadora</h3>
-                </div>
+                </div>  
+                <div class="profession" style="--i:1;">
+                    <i class='bx bx-code-alt'></i>
+                    <h3>Desenvolvedora Web</h3>
+                </div> 
                 <div class="profession" style="--i:2;">
                     <i class='bx bxs-camera'></i>
                     <h3>Fotógrafa</h3>
@@ -146,17 +146,17 @@
                 <p>Fiz a trilha de UX/UI pela Alura e me encantei por essa área cheia de criatividade e empatia.</p>
                 <a href="#ux" class="btn">Ver mais<i class='bx bx-down-arrow-alt'></i></a>
             </div>
-           <div class="services-box">
-                <i class='bx bx-code-alt'></i>
-                <h3>Desenvolvedora Web</h3>
-                <p>Sempre adorei tecnologia e poder criar interfaces é maravilhoso e fascinante.</p>
-                <a href="#dev" class="btn">Ver mais<i class='bx bx-down-arrow-alt'></i></a>
-            </div>
             <div class="services-box">
                 <i class='bx bxs-megaphone'></i>
                 <h3>Comunicadora</h3>
                 <p>Sou estudande universitária de jornalismo e acredito que comunicar é levar transparência.</p>
                 <a href="#comu" class="btn">Ver mais<i class='bx bx-down-arrow-alt'></i></a>
+            </div>
+            <div class="services-box">
+                <i class='bx bx-code-alt'></i>
+                <h3>Desenvolvedora Web</h3>
+                <p>Sempre adorei tecnologia e poder criar interfaces é maravilhoso e fascinante.</p>
+                <a href="#dev" class="btn">Ver mais<i class='bx bx-down-arrow-alt'></i></a>
             </div>
            <div class="services-box">
                 <i class='bx bxs-camera'></i>
